[package]
name = "sugar_cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
kdam = "0.5.1"
tikv-jemallocator = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
